[package]
name = "zcash-coldwallet"
version = "0.1.0"
authors = ["Hanh <hanh425@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.3.1", features = ["tls", "tokio", "tls-roots"] }
tokio = { version = "0.2.13", features = ["macros", "blocking"] }
prost = "0.6"
tiny-bip39 = "0.8"
rusqlite = "0.24.2"
serde_json = "1.0.62"
serde = { version = "1.0.123", features = ["derive"] }
hex = "0.4.2"
jubjub = "0.5.1"
funty = "=1.1.0"
hex-literal = "0.3.1"
clap = "3.0.0-beta.2"
rand = "0.8.3"
bigdecimal = "0.2.0"
chrono = "0.4.19"

tracing = "0.1"
tracing-subscriber = { version = "0.2.7", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }

thiserror = "1.0.24"
anyhow = "1.0.38"

android_logger = "0.10.0"
log = "0.4.14"

[build-dependencies]
tonic-build = { version = "0.3.1", features = ["prost"] }

[dependencies.zcash_client_backend]
git = "https://github.com/zcash/librustzcash.git"
rev = "b37b5876f2442a4115e553b998d7549045a87fbf"

[dependencies.zcash_client_sqlite]
git = "https://github.com/zcash/librustzcash.git"
rev = "b37b5876f2442a4115e553b998d7549045a87fbf"

[dependencies.zcash_primitives]
git = "https://github.com/zcash/librustzcash.git"
rev = "b37b5876f2442a4115e553b998d7549045a87fbf"

[dependencies.zcash_proofs]
git = "https://github.com/zcash/librustzcash.git"
rev = "b37b5876f2442a4115e553b998d7549045a87fbf"

[features]
mainnet = []
